--- a/config.ini
+++ b/config.ini
@@ -44,36 +44,36 @@ surge_ruleset=🐟 漏网之鱼,[]FINAL
 ;设置规则标志位
 
 ;设置分组标志位
-custom_proxy_group=🚀 节点选择`select`[]🚀 手动切换`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇺🇲 美国节点`[]🏳️‍🌈 其他节点`[]🇨🇳 回国节点`[]DIRECT
+custom_proxy_group=🚀 节点选择`select`[]🚀 手动切换`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇺🇲 美国节点`[]🏳️‍🌈 其他节点`[]🇨🇳 回国节点`[]DIRECT
 custom_proxy_group=🚀 手动切换`select`.*
-custom_proxy_group=📲 电报消息`select`[]🚀 节点选择`[]🚀 手动切换`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇺🇲 美国节点`[]🏳️‍🌈 其他节点`[]🇨🇳 回国节点`[]DIRECT
-custom_proxy_group=🎙 Discord`select`[]🚀 节点选择`[]🚀 手动切换`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇺🇲 美国节点`[]🏳️‍🌈 其他节点`[]🇨🇳 回国节点`[]DIRECT
-custom_proxy_group=📹 油管视频`select`[]🚀 节点选择`[]🚀 手动切换`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇺🇲 美国节点`[]🏳️‍🌈 其他节点`[]🇨🇳 回国节点`[]DIRECT
-custom_proxy_group=🎥 奈飞视频`select`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇺🇲 美国节点`[]🏳️‍🌈 其他节点`[]🎥 奈飞节点`[]🇨🇳 回国节点`[]🚀 节点选择`[]🚀 手动切换`[]DIRECT
-custom_proxy_group=📺 巴哈姆特`select`[]🇨🇳 台湾节点`[]🚀 节点选择`[]🚀 手动切换`[]DIRECT
-custom_proxy_group=📼 哔哩哔哩`select`[]DIRECT`[]🇨🇳 台湾节点`[]🇭🇰 香港节点`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]🚀 手动切换`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇺🇲 美国节点`[]🏳️‍🌈 其他节点`[]🇨🇳 回国节点`[]DIRECT
-custom_proxy_group=🌏 国内媒体`select`[]DIRECT`[]🇨🇳 回国节点`[]🚀 节点选择`[]🚀 手动切换`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇺🇲 美国节点`[]🏳️‍🌈 其他节点
-custom_proxy_group=📢 谷歌FCM`select`[]DIRECT`[]🚀 节点选择`[]🚀 手动切换`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇺🇲 美国节点`[]🏳️‍🌈 其他节点`[]🇨🇳 回国节点
-custom_proxy_group=Ⓜ️ 微软云盘`select`[]DIRECT`[]🚀 节点选择`[]🚀 手动切换`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇺🇲 美国节点`[]🏳️‍🌈 其他节点`[]🇨🇳 回国节点
-custom_proxy_group=🍎 苹果服务`select`[]DIRECT`[]🚀 节点选择`[]🚀 手动切换`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇺🇲 美国节点`[]🏳️‍🌈 其他节点`[]🇨🇳 回国节点
-custom_proxy_group=🎮 游戏平台`select`[]DIRECT`[]🚀 节点选择`[]🚀 手动切换`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇺🇲 美国节点`[]🏳️‍🌈 其他节点`[]🇨🇳 回国节点
+custom_proxy_group=📲 电报消息`select`[]🚀 节点选择`[]🚀 手动切换`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇺🇲 美国节点`[]🏳️‍🌈 其他节点`[]🇨🇳 回国节点`[]DIRECT
+custom_proxy_group=🎙 Discord`select`[]🚀 节点选择`[]🚀 手动切换`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇺🇲 美国节点`[]🏳️‍🌈 其他节点`[]🇨🇳 回国节点`[]DIRECT
+custom_proxy_group=📹 油管视频`select`[]🚀 节点选择`[]🚀 手动切换`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇺🇲 美国节点`[]🏳️‍🌈 其他节点`[]🇨🇳 回国节点`[]DIRECT
+custom_proxy_group=🎥 奈飞视频`select`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇺🇲 美国节点`[]🏳️‍🌈 其他节点`[]🎥 奈飞节点`[]🇨🇳 回国节点`[]🚀 节点选择`[]🚀 手动切换`[]DIRECT
+custom_proxy_group=📺 巴哈姆特`select`[]🇹🇼 台湾节点`[]🚀 节点选择`[]🚀 手动切换`[]DIRECT
+custom_proxy_group=📼 哔哩哔哩`select`[]DIRECT`[]🇹🇼 台湾节点`[]🇭🇰 香港节点`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]🚀 手动切换`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇺🇲 美国节点`[]🏳️‍🌈 其他节点`[]🇨🇳 回国节点`[]DIRECT
+custom_proxy_group=🌏 国内媒体`select`[]DIRECT`[]🇨🇳 回国节点`[]🚀 节点选择`[]🚀 手动切换`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇺🇲 美国节点`[]🏳️‍🌈 其他节点
+custom_proxy_group=📢 谷歌FCM`select`[]DIRECT`[]🚀 节点选择`[]🚀 手动切换`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇺🇲 美国节点`[]🏳️‍🌈 其他节点`[]🇨🇳 回国节点
+custom_proxy_group=Ⓜ️ 微软云盘`select`[]DIRECT`[]🚀 节点选择`[]🚀 手动切换`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇺🇲 美国节点`[]🏳️‍🌈 其他节点`[]🇨🇳 回国节点
+custom_proxy_group=🍎 苹果服务`select`[]DIRECT`[]🚀 节点选择`[]🚀 手动切换`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇺🇲 美国节点`[]🏳️‍🌈 其他节点`[]🇨🇳 回国节点
+custom_proxy_group=🎮 游戏平台`select`[]DIRECT`[]🚀 节点选择`[]🚀 手动切换`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇺🇲 美国节点`[]🏳️‍🌈 其他节点`[]🇨🇳 回国节点
 custom_proxy_group=🎶 网易音乐`select`(网易|音乐|解锁|Music|NetEase)`[]DIRECT`[]🇨🇳 回国节点`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🇨🇳 回国节点`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]🚀 手动切换`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇺🇲 美国节点`[]🏳️‍🌈 其他节点`[]🇨🇳 回国节点`[]DIRECT
+custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]🚀 手动切换`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇺🇲 美国节点`[]🏳️‍🌈 其他节点`[]🇨🇳 回国节点`[]DIRECT
 custom_proxy_group=🛑 广告拦截`select`[]REJECT`[]DIRECT
 custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
 custom_proxy_group=🆎 AdBlock`select`[]REJECT`[]DIRECT
 custom_proxy_group=🛡️ 隐私防护`select`[]REJECT`[]DIRECT
-custom_proxy_group=🇭🇰 香港节点`select`(港|HK|Hong Kong)`
-custom_proxy_group=🇨🇳 台湾节点`select`(台|新北|彰化|TW|Taiwan)`
+custom_proxy_group=🇭🇰 香港节点`select`(港|香港|HK|Hong Kong)`
+custom_proxy_group=🇹🇼 台湾节点`select`(台|台湾|新北|彰化|TW|Taiwan)`
 custom_proxy_group=🇸🇬 狮城节点`select`(新|新加坡|坡|狮城|SG|Singapore)`
-custom_proxy_group=🇯🇵 日本节点`select`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)`
+custom_proxy_group=🇯🇵 日本节点`select`(日本|日|东京|大阪|埼玉|[^-]日|JP|Japan)`
 custom_proxy_group=🇰🇷 韩国节点`select`(韩国|韩|KR|Korea)`
-custom_proxy_group=🇺🇲 美国节点`select`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`
-custom_proxy_group=🏳️‍🌈 其他节点`select`(澳|澳门|MO|俄罗斯|俄|伯力|RU|阿根廷|AR|英国|英|伦敦|GB|德国|德|DE|澳大利亚|澳|AU|意大利|意|IT|欧洲|欧|泰国|泰|TH|印度|印|IN|土耳其|土|TR|巴西|巴|BR|越南|越|VN|南非|ZA)`
-custom_proxy_group=🎥 奈飞节点`select`(NF|奈飞|奈非|网飞|解锁|Netflix|NETFLIX|Media)
-custom_proxy_group=🇨🇳 回国节点`select`(回国|中国|China|CN|CHN)`
+custom_proxy_group=🇺🇲 美国节点`select`(美|波特兰|达拉斯|俄勒冈|凤凰城|菲尼克斯|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`
+custom_proxy_group=🏳️‍🌈 其他节点`select`(澳|澳门|MO|俄罗斯|俄|伯力|西伯利亚|RU|阿根廷|AR|英国|英|伦敦|GB|德国|德|DE|澳大利亚|澳|AU|意大利|意|IT|欧洲|欧|泰国|泰|TH|印度|印|IN|土耳其|土|TR|巴西|巴|BR|越南|越|VN|南非|ZA)`
+custom_proxy_group=🎥 奈飞节点`select`(NF|奈飞|奈非|网飞|媒体|Netflix|NETFLIX|Media)
+custom_proxy_group=🇨🇳 回国节点`select`(回国|中国|China|CHN)`
 
 ;设置分组标志位
 
