--- a/config.ini
+++ b/config.ini
@@ -67,7 +67,7 @@ custom_proxy_group=🆎 AdBlock`select`[]REJECT`[]DIRECT
 custom_proxy_group=🛡️ 隐私防护`select`[]REJECT`[]DIRECT
 custom_proxy_group=🇭🇰 香港节点`select`(港|香港|HK|Hong Kong)`
 custom_proxy_group=🇹🇼 台湾节点`select`(台|台湾|新北|彰化|TW|Taiwan)`
-custom_proxy_group=🇸🇬 狮城节点`select`(新|新加坡|坡|狮城|SG|Singapore)`
+custom_proxy_group=🇸🇬 狮城节点`select`(^((?!西.)*新((?!西).)*$|新加坡|坡|狮城|SG|Singapore)`
 custom_proxy_group=🇯🇵 日本节点`select`(日本|日|东京|大阪|埼玉|[^-]日|JP|Japan)`
 custom_proxy_group=🇰🇷 韩国节点`select`(韩国|韩|KR|Korea)`
 custom_proxy_group=🇺🇲 美国节点`select`(美|美国|波特兰|达拉斯|俄勒冈|凤凰城|菲尼克斯|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`
