--- a/config.ini
+++ b/config.ini
@@ -73,7 +73,7 @@ custom_proxy_group=🇰🇷 韩国节点`select`(韩国|韩|KR|Korea)`
 custom_proxy_group=🇺🇲 美国节点`select`(美|美国|波特兰|达拉斯|俄勒冈|凤凰城|菲尼克斯|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`
 custom_proxy_group=🏳️‍🌈 其他节点`select`(澳|澳门|MO|俄罗斯|俄|西伯利亚|伯力|RU|阿根廷|AR|英国|英|伦敦|GB|德国|德|DE|澳大利亚|澳|AU|意大利|意|IT|欧洲|欧|泰国|泰|TH|印度|印|IN|土耳其|土|TR|巴西|巴|BR|越南|越|VN|南非|ZA|马来西亚|马|MY)`
 custom_proxy_group=🎥 奈飞节点`select`(NF|奈飞|奈非|网飞|媒体|Netflix|NETFLIX|Media)`
-custom_proxy_group=🇨🇳 回国节点`select`(回国|中国|China|CHN)`
+custom_proxy_group=🇨🇳 回国节点`select`(回国|中国|China|CN)`
 
 ;设置分组标志位
 
