--- a/Config.ini
+++ b/Config.ini
@@ -90,4 +90,9 @@ overwrite_original_rules=true
 
 clash_rule_base=https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GeneralClashConfig.yml
 
+;Options for adding emojis
+add_emoji=true
+remove_old_emoji=true
+emoji=(?i:\bTW[N]?\b|Taiwan|新北|彰化|\bCHT\b|台湾|[^-]台|\bHINET\b),🇹🇼
+
 ;luck
