--- a/Config.ini
+++ b/Config.ini
@@ -74,7 +74,7 @@ custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
 custom_proxy_group=🆎 AdBlock`select`[]REJECT`[]DIRECT
 custom_proxy_group=🛡️ 隐私防护`select`[]REJECT`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]🚀 手动切换`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇺🇲 美国节点`[]🏳️‍🌈 其他节点`[]DIRECT
-custom_proxy_group=🇭🇰 香港节点`select`(港|香港|HK|Hong Kong)`
+custom_proxy_group=🇭🇰 香港节点`select`(^((?!台|日).)*港((?!台|日).)*$|HK|Hong Kong)`
 custom_proxy_group=🇹🇼 台湾节点`select`(台|台湾|新北|彰化|TW|Taiwan)`
 custom_proxy_group=🇸🇬 狮城节点`select`(新加坡|狮城|SG|Singapore)`
 custom_proxy_group=🇯🇵 日本节点`select`(日本|日|东京|大阪|埼玉|[^-]日|JP|Japan)`
