--- a/Config.ini
+++ b/Config.ini
@@ -103,7 +103,9 @@ emoji=(?i:Bandwidth|expire|流量|时间|应急|过期),🏳️‍🌈
 emoji=(?i:\bTW[N]?\b|Taiwan|新北|彰化|\bCHT\b|台湾|[^-]台|\bHINET\b),🇹🇼
 emoji=(?i:\bJP[N]?\b|Japan|Tokyo|Osaka|Saitama|日本|东京|大阪|埼玉|[^-]日),🇯🇵
 emoji=(?i:\bHK[G]?\b|Hong.*?Kong|\bHKT\b|\bHKBN\b|\bHGC\b|\bWTT\b|\bCMI\b|[^-]港),🇭🇰
+emoji=(Macao|澳门|\bCTM\b),🇲🇴
 emoji=(?i:\bSG[P]?\b|Singapore|新加坡|狮城),🇸🇬
+emoji=(North.*?Korea|朝鲜),🇰🇵
 emoji=(?i:\bK[O]?R\b|Korea|首尔|韩|韓),🇰🇷
 emoji=(?i:\bUS[A]?\b|America|United.*?States|美国|[^-]美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥),🇺🇸
 emoji=(Ascension|阿森松),🇦🇨
@@ -124,14 +126,14 @@ emoji=(Colombia|哥伦比亚),🇨🇴
 emoji=(Costa Rica|哥斯达黎加),🇨🇷
 emoji=(塞浦路斯|Cyprus),🇨🇾
 emoji=(Czech|捷克),🇨🇿
-emoji=(?i:\bDE[U]?\b|Germany|法兰克福|德(国|意志)|中德|^德$),🇩🇪
+emoji=(German|?i:\bDE[U]?\b|Germany|法兰克福|德(国|意志)|中德|^德$),🇩🇪
 emoji=(?i:\bD[N]?K\b|Denmark|丹麦),🇩🇰
 emoji=(爱沙尼亚|Estonia),🇪🇪
 emoji=(埃及|Egypt),🇪🇬
 emoji=(?i:\bES[P]?\b|Spain|西班牙),🇪🇸
 emoji=(Europe|欧洲),🇪🇺
 emoji=(Finland|Helsinki|芬兰|赫尔辛基),🇫🇮
-emoji=(?i:\bFR[A]?\b|France|Paris|法国|巴黎),🇫🇷
+emoji=(French|?i:\bFR[A]?\b|France|Paris|法国|巴黎),🇫🇷
 emoji=(?i:\bUK\b|\bGB[R]?\b|England|United.*?Kingdom|London|英国|[^-]英|伦敦),🇬🇧
 emoji=(希腊|Greece),🇬🇷
 emoji=(格鲁吉亚|Georgia),🇪
@@ -149,7 +151,6 @@ emoji=(约旦|Jordan),🇯🇴
 emoji=(肯尼亚|Kenya),🇰🇪
 emoji=(吉尔吉斯斯坦|Kyrgyzstan),🇰🇬
 emoji=(柬埔寨|Cambodia),🇰🇭
-emoji=(North.*?Korea|朝鲜),🇰🇵
 emoji=(哈萨克斯坦|Kazakhstan),🇰🇿
 emoji=(立陶宛|Lietuvos),🇱🇹
 emoji=(卢森堡|Luxemburg|Luxembourg),🇱🇺
@@ -157,7 +158,6 @@ emoji=(拉脱维亚|Latvia),🇱🇻
 emoji=(Moldova|摩尔多瓦),🇲🇩
 emoji=(北马其顿|Macedonia),🇲🇰
 emoji=(蒙古|Монголулс|Mongolia),🇲🇳
-emoji=(Macao|澳门|\bCTM\b),🇲🇴
 emoji=(墨西哥|Mexico),🇲🇽
 emoji=(Malaysia|马来西亚),🇲🇾
 emoji=(尼日利亚|Nigeria),🇳🇬
