--- a/Config.ini
+++ b/Config.ini
@@ -183,6 +183,7 @@ emoji=(Turkey|土耳其|伊斯坦布尔),🇹🇷
 emoji=(乌拉圭|Uruguay),🇺🇾
 emoji=(Vietnam|越南),🇻🇳
 emoji=(Africa|南非),🇿🇦
+emoji=(Antarctica|南极),🇦🇶
 emoji=(?i:\bC[H]?N\b|China|回国|中国[^-]|江苏[^-]|北京[^-]|上海[^-]|广州[^-]|深圳[^-]|杭州[^-]|常州[^-]|徐州[^-]|青岛[^-]|宁波[^-]|镇江[^-]|成都[^-]|back),🇨🇳
 
 ;luck
