--- a/Config.ini
+++ b/Config.ini
@@ -126,6 +126,7 @@ emoji=(Colombia|哥伦比亚),🇨🇴
 emoji=(Costa Rica|哥斯达黎加),🇨🇷
 emoji=(塞浦路斯|Cyprus),🇨🇾
 emoji=(Czech|捷克),🇨🇿
+emoji=(French|?i:\bFR[A]?\b|France|Paris|法国|巴黎),🇫🇷
 emoji=(German|?i:\bDE[U]?\b|Germany|法兰克福|德(国|意志)|中德|^德$),🇩🇪
 emoji=(?i:\bD[N]?K\b|Denmark|丹麦),🇩🇰
 emoji=(爱沙尼亚|Estonia),🇪🇪
@@ -133,7 +134,6 @@ emoji=(埃及|Egypt),🇪🇬
 emoji=(?i:\bES[P]?\b|Spain|西班牙),🇪🇸
 emoji=(Europe|欧洲),🇪🇺
 emoji=(Finland|Helsinki|芬兰|赫尔辛基),🇫🇮
-emoji=(French|?i:\bFR[A]?\b|France|Paris|法国|巴黎),🇫🇷
 emoji=(?i:\bUK\b|\bGB[R]?\b|England|United.*?Kingdom|London|英国|[^-]英|伦敦),🇬🇧
 emoji=(希腊|Greece),🇬🇷
 emoji=(格鲁吉亚|Georgia),🇪
@@ -184,6 +184,7 @@ emoji=(乌拉圭|Uruguay),🇺🇾
 emoji=(Vietnam|越南),🇻🇳
 emoji=(Africa|南非),🇿🇦
 emoji=(Antarctica|南极),🇦🇶
+emoji=(Vaticano|梵蒂冈),🇻🇦
 emoji=(?i:\bC[H]?N\b|China|回国|中国[^-]|江苏[^-]|北京[^-]|上海[^-]|广州[^-]|深圳[^-]|杭州[^-]|常州[^-]|徐州[^-]|青岛[^-]|宁波[^-]|镇江[^-]|成都[^-]|back),🇨🇳
 
 ;luck
