--- a/Config.ini
+++ b/Config.ini
@@ -127,7 +127,7 @@ emoji=(Costa Rica|哥斯达黎加),🇨🇷
 emoji=(塞浦路斯|Cyprus),🇨🇾
 emoji=(Czech|捷克),🇨🇿
 emoji=(French|?i:\bFR[A]?\b|France|Paris|法国|巴黎),🇫🇷
-emoji=(German|?i:\bDE[U]?\b|Germany|法兰克福|德(国|意志)|中德|^德$),🇩🇪
+emoji=(German|法兰克福|德(国|意志)|中德|^德$),🇩🇪
 emoji=(?i:\bD[N]?K\b|Denmark|丹麦),🇩🇰
 emoji=(爱沙尼亚|Estonia),🇪🇪
 emoji=(埃及|Egypt),🇪🇬
