--- a/Config.ini
+++ b/Config.ini
@@ -113,7 +113,7 @@ emoji=(?i:\bUAE\b|Dubai|阿联酋|迪拜),🇦🇪
 emoji=(阿尔巴尼亚|Albania),🇦🇱
 emoji=(Argentina|阿根廷),🇦🇷
 emoji=(Austria|Vienna|奥地利|维也纳),🇦🇹
-emoji=(?i:\bAU[S]?\b|Australia|Sydney|澳大利亚|澳洲|悉尼),🇦🇺
+emoji=(Australia|Sydney|澳大利亚|澳洲|悉尼),🇦🇺
 emoji=(阿塞拜疆|Azerbaijan),🇦🇿
 emoji=(波黑共和国|波士尼亚与赫塞哥维纳|Bosnia|Herzegovina),🇧🇦
 emoji=(Belgium|比利时),🇧🇪
