--- a/Config.ini
+++ b/Config.ini
@@ -131,7 +131,7 @@ emoji=(German|法兰克福|德(国|意志)|中德|^德$),🇩🇪
 emoji=(?i:\bD[N]?K\b|Denmark|丹麦),🇩🇰
 emoji=(爱沙尼亚|Estonia),🇪🇪
 emoji=(埃及|Egypt),🇪🇬
-emoji=(?i:\bES[P]?\b|Spain|西班牙),🇪🇸
+emoji=(Spain|西班牙),🇪🇸
 emoji=(Europe|欧洲),🇪🇺
 emoji=(Finland|Helsinki|芬兰|赫尔辛基),🇫🇮
 emoji=(?i:\bUK\b|\bGB[R]?\b|England|United.*?Kingdom|London|英国|[^-]英|伦敦),🇬🇧
@@ -143,7 +143,7 @@ emoji=(Indonesia|Jakarta|印尼|印度尼西亚|雅加达),🇮🇩
 emoji=(Ireland|Dublin|爱尔兰|都柏林),🇮🇪
 emoji=(Israel|以色列),🇮🇱
 emoji=(马恩岛|Mann),🇮🇲
-emoji=(?i:\bIN[D]?\b|India|Mumbai|印度|孟买|加尔各答|贾坎德|泰米尔纳德),🇮🇳
+emoji=(India|Mumbai|印度|孟买|加尔各答|贾坎德|泰米尔纳德),🇮🇳
 emoji=(伊朗|Iran),🇮🇷
 emoji=(?i:\bIS[L]?\b|Iceland|冰岛),🇮🇸
 emoji=(Italy|Milan|意大利|米兰),🇮🇹
